<resources>
    <string name="app_name">ClickCall</string>

    <!-- List Screen -->
    <string name="title_contact_list">ClickCall</string>
    <string name="empty_list_title">No Contacts</string>
    <string name="empty_list_description">No contacts registered.\nPlease add your first contact.</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="hang_up_button">Hang Up</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_contact">Edit Contact</string>

    <!-- Add Contact Screen -->
    <string name="title_add_contact">Add Contact</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="select_image">Select Photo</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_empty_nickname">Please enter a nickname</string>
    <string name="error_empty_phone">Please enter a phone number</string>
    <string name="error_invalid_phone">Please enter a valid phone number</string>
    <string name="error_duplicate_nickname">This nickname is already in use</string>
    <string name="max_contacts_reached">You can register up to 30 contacts</string>
    <string name="hint_priority">Priority (show at top)</string>
    <string name="error_max_priority">Up to 3 priority contacts allowed</string>

    <!-- Permissions -->
    <string name="permission_required">Permission required</string>
    <string name="permission_call_denied">Call permission denied</string>
    <string name="permission_storage_denied">Storage permission denied</string>

    <!-- Messages -->
    <string name="contact_added">Contact added</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="call_initiated">Calling…</string>
    <string name="confirm_delete_title">Delete Contact</string>
    <string name="confirm_delete_message">Are you sure you want to delete this contact?</string>
    <string name="button_delete">Delete</string>

    <!-- Export / Import -->
    <string name="menu_export">Export Contacts</string>
    <string name="menu_import">Import Contacts</string>
    <string name="export_success">Contacts exported successfully</string>
    <string name="export_failed">Export failed</string>
    <string name="import_success">Contacts imported successfully</string>
    <string name="import_failed">Import failed. Please check the file format.</string>
    <string name="import_confirm_title">Import Contacts</string>
    <string name="import_confirm_message">Current contacts will be replaced with the imported data. Continue?</string>
    <string name="button_confirm">Confirm</string>
</resources>
